fix: resolve incompatible Map.of generic type in SearchApiController
Made-with: Cursor